add extensions
